--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ html {
 
 .container {
     background-color: #7e258fc5;
+    width: auto;
+    border-radius: 15%;
 }
 
 .header-content h1 {
@@ -69,34 +71,57 @@ html {
 }
 
 div .person {
-    display: flex;
+    display: block;
     justify-content: center;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     margin-left: 5px;
     margin-right: 15px;
 }
 
 div .person1 {
-    display: flex;
+    display: block;
     justify-content: center;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     margin-left: 15px;
     margin-right: 15px;
 }
 
 div .person2 {
-    display: flex;
+    display: block;
     justify-content: center;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     margin-left: 35px;
     margin-right: 5px;
 }
 
+.header-info {
+    display: flex;
+    justify-content: center;
+}
 img {
     border-radius: 48%;
+    margin-bottom: 15px;
+}
+.row {
+    display: block;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 25px;
+    margin-right: 15px;
+}
+
+div .wrapper {
+    display: flex;
+    /* flex-direction: row; */
+    /* justify-items: center; */
+    justify-content: center;
+    height: 310px;
+    width: auto ;
+    margin-left: 25px;
+    margin-right: 15px;
 }
 
 .info {
@@ -121,7 +146,7 @@ img {
 .age {
     margin-right: 10px;
     margin-top: 15px;
-    margin-left: 100px;
+    margin-left: 90px;
 }
 
 .email {
